--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-client",
   "version": "1.0.0",
   "description": "A client, to match movie-api",
-  "entry": "src/index.html",
+  "default": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/bentleyjensen/movie-client/issues"
   },
-  "homepage": "https://github.com/bentleyjensen/movie-client#readme"
+  "homepage": "https://github.com/bentleyjensen/movie-client#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
