--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "parcel": "^2.0.0-rc.0",
     "react": "^18.2.0",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "buffer": "^6.0.3",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "buffer": "^6.0.3",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10"
   }
 }
