--- a/package.json
+++ b/package.json
@@ -20,14 +20,11 @@
   "homepage": "https://github.com/bentleyjensen/movie-client#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "parcel": "^2.0.0-rc.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "@parcel/transformer-sass": "^2.0.0-rc.0",
-    "buffer": "^6.0.3",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0"
   }
 }
