--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "default": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel build src/index.html",
+    "start": "parcel serve src/index.html",
     "build": "parcel build src/index.html"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
