--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/bentleyjensen/movie-client#readme",
   "dependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "prop-types": "^15.8.1",
@@ -27,7 +28,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-rc.0"
   },
   "engines": {
     "node": "16.x",
