--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0"
   },
   "engines": {
     "node": "16.x",
