--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "engines": {
     "node": "16.x",
     "npm": "8.x"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0"
   }
 }
