--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "npm": "8.x"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-rc.0"
+    "@parcel/transformer-sass": "2.0.0-rc.0"
   }
 }
