--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve src/index.html",
+    "build": "parcel build src/index.html --public-url /",
     "heroku-prebuild": "npm i --location=global parcel@next"
   },
   "repository": {
